syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "proto/protobp";


message User {
  string firstName = 1;
  string lastName = 2;
  string fullName = 3;
  int32 age = 4;
  string email = 5;
  google.protobuf.Timestamp createOn = 6;
  Address address = 7;
}

message Address {
  double latitude = 1;
  double longitude = 2;
}

